--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 * {
     box-sizing: border-box;
   }
+  main{
+    background-image:url("https://images.unsplash.com/photo-1661524093658-c30b203de445?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80") ;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height:100vh;
+    width:100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .light-box{
+    border: 3px solid red;
+    padding: 10px;
+    margin: 10px;
+  }
