--- a/style.css
+++ b/style.css
@@ -1,19 +1,61 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+main {
+  background-image: url("https://images.unsplash.com/photo-1661524093658-c30b203de445?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.light-container {
+  display: flex;
+  border: 5px solid yellow;
+  height: 800px;
+  width: 800px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.light-box {
+  border: 4px solid pink;
+  padding: 10px;
+  margin: 10px;
+  border-radius: 10px;
+}
+img {
+  width: 200px;
+  height: 200px;
+}
+
+@media only screen and (max-width: 576px) {
+  .light-box {
+    border: 1px solid blue; /* Red */
   }
-  main{
-    background-image:url("https://images.unsplash.com/photo-1661524093658-c30b203de445?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80") ;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height:100vh;
-    width:100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  img {
+    width: 50px;
+    height: 50px;
   }
-  .light-box{
-    border: 3px solid red;
-    padding: 10px;
-    margin: 10px;
+}
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  .light-box {
+    border: 2px solid teal; /* Red */
   }
+  img {
+    width: 80px;
+    height: 80px;
+  }
+}
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .light-box {
+    border: 3px solid red; /* Red */
+  }
+  img {
+    width: 150px;
+    height: 150px;
+  }
+}
