--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ main {
   justify-content: center;
 }
 .light-container {
+  position: relative;
   display: flex;
   border: 5px solid yellow;
   height: 800px;
